# graphics

./: CMakeLists.txt  main.c
gfx/: shader.c  shader.h
shaders/: shader.fs  shader.vs
